# PhyG-Integration-Tests

./: .gitignore  Changelog.md  LICENSE  PhyG-integration-tests.cabal  README.md  Test_times.xlsx  cabal.project  single-threaded.project
data/: speedy.txt  subset-hours.txt  subset-rapid.txt
src/: IntegrationTests.hs
src/Test/: Speedy.hs  SubProcess.hs
tests/: remake-golden-cabal-run.sh  remake-golden-only-copy.sh
tests/t0/: t0.csv  t0.csv.golden  t0.pg  t0.tre  t0.tre.golden  t0_pd.csv  t0_pd.csv.golden
tests/t1/: t1.pg  t1.ss  t1.ss.golden  t1_ascii.txt  t1_ascii.txt.golden  t1_collapse.tre  t1_collapse.tre.golden  t1_ia.txt  t1_ia.txt.golden  t1_nocollapse.tre  t1_pd.csv.golden
tests/t10/: t10.csv  t10.pg  t10.tre.golden
tests/t100/: t100.pg  t100.tre  t100.tre.golden
tests/t101/: t101.pg  t101.tre
tests/t102/: t102.pg  t102.tre
tests/t103/: t103.pg  t103.tre  t103.tre.golden
tests/t104/: t104.pg  t104.tre  t104.tre.golden
tests/t105/: t105.pg  t105.tre  t105.tre.golden
tests/t106/: t106.pg  t106.tre  t106.tre.golden
tests/t107/: t107.pg  t107.tre  t107.tre.golden
tests/t108/: t108.pg  t108.tre  t108.tre.golden
tests/t109/: t109.pg  t109.tre  t109.tre.golden
tests/t11/: t11.pg  t11.tre.golden  t11_cr.csv
tests/t110/: t110.pg  t110.tre  t110.tre.golden
tests/t111/: t111.csv.golden  t111.pg  t111.tre  t111.tre.golden
tests/t112/: t112.pg  t112.tre  t112.tre.golden
tests/t113/: t113.pg  t113.tre  t113.tre.golden
tests/t114/: t114.pg  t114.tre  t114.tre.golden
tests/t115/: t115.pg  t115.tre  t115.tre.golden
tests/t116/: t116.pg  t116.tre  t116.tre.golden
tests/t117/: t117.pg  t117.tre.golden
tests/t118/: t118.pg  t118.tre  t118.tre.golden
tests/t119/: t119.pg  t119.tre  t119.tre.golden
tests/t12/: t12.pg  t12.tre  t12.tre.golden
tests/t120/: t120.pg  t120.tre  t120.tre.golden
tests/t121/: t121.pg  t121.tre  t121.tre.golden
tests/t122/: t122.pg  t122.tre  t122.tre.golden
tests/t123/: t123.pg  t123.tre
tests/t124/: t124.pg  t124.tre.golden
tests/t125/: t125.pg  t125.tre  t125.tre.golden
tests/t126/: t126.csv  t126.pg  t126.tre.golden
tests/t127/: t127.pg  t127.tre  t127.tre.golden
tests/t128/: t128.pg  t128.tre  t128.tre.golden
tests/t129/: t129.pg  t129.tre  t129.tre.golden
tests/t13/: t13.pg  t13.tre  t13.tre.golden
tests/t130/: t130.pg  t130.tre  t130.tre.golden
tests/t131/: t131.pg  t131.tre  t131.tre.golden
tests/t132/: t132.pg  t132.tre  t132.tre.golden
tests/t133/: dec258_12Saln_missing.fas  t133.pg  t133.tre  t133.tre.golden
tests/t134/: t134.pg  t134.tre  t134.tre.golden
tests/t135/: t135.csv  t135.pg  t135.tre  t135.tre.golden
tests/t136/: t136.pg  t136.tre  t136.tre.golden
tests/t137/: t137.csv.golden  t137.pg  t137.tre  t137.tre.golden
tests/t138/: t138.csv.golden  t138.pg  t138.tre  t138.tre.golden
tests/t139/: t139.csv  t139.csv.golden  t139.pg  t139.tre  t139.tre.golden
tests/t14/: chel_rename.txt  t14.csv  t14.csv.golden  t14.pg  t14.tre  t14.tre.golden
tests/t140/: t140.pg  t140.tre  t140.tre.golden
tests/t141/: t141.pg  t141.tre  t141.tre.golden
tests/t142/: t142.csv  t142.pg  t142.tre  t142.tre.golden
tests/t143/: t143.pg  t143.tre  t143.tre.golden
tests/t144/: t144.pg  t144.tre  t144.tre.golden
tests/t145/: t145.pg  t145.tre  t145.tre.golden
tests/t146/: t146.pg  t146.tre  t146.tre.golden
tests/t147/: t147.pg  t147.tre  t147.tre.golden
tests/t148/: t148.pg  t148.tre
tests/t149/: t149.pg  t149.tre  t149.tre.golden
tests/t15/: t15.pg  t15.tre  t15.tre.golden  t15_rec-cc.gv  t15_rec-cc.gv.golden  t15_rec-ci.tre.golden
tests/t150/: t150.pg  t150.tre  t150.tre.golden
tests/t151/: t151.pg  t151.tre
tests/t152/: t152.csv  t152.pg  t152.tre  t152.tre.golden
tests/t153/: t153.pg  t153.tre  t153.tre.golden
tests/t154/: t154.pg  t154.tre  t154.tre.golden
tests/t155/: t155.pg  t155.tre  t155.tre.golden
tests/t156/: t156.pg  t156.tre  t156.tre.golden
tests/t157/: t157.pg  t157.tre  t157.tre.golden
tests/t158/: t158.pg  t158.tre
tests/t159/: t159.csv.golden  t159.pg  t159.tre  t159.tre.golden  t159_cr.csv
tests/t16/: t16.pg  t16.tre
tests/t160/: t160.pg  t160.tre  t160.tre.golden
tests/t161/: t161.pg  t161.tre.golden
tests/t162/: t162.pg  t162.tre.golden
tests/t163/: t163.pg  t163.tre  t163.tre.golden
tests/t164/: t164.pg  t164.tre
tests/t165/: t165.pg  t165.tre
tests/t166/: t166.pg  t166.tre  t166.tre.golden
tests/t167/: t167.pg  t167.tre  t167.tre.golden
tests/t168/: t168.csv  t168.pg  t168.tre  t168.tre.golden
tests/t169/: t169.pg  t169.tre  t169.tre.golden
tests/t17/: t17.pg  t17.tre  t17.tre.golden  t17_cr.csv
tests/t170/: t170.pg  t170.tre  t170.tre.golden
tests/t171/: t171.pg  t171.tre  t171.tre.golden
tests/t172/: t172.pg  t172.tre.golden
tests/t173/: t173.pg  t173.tre.golden
tests/t174/: t174.pg  t174.tre  t174.tre.golden
tests/t175/: t175.pg  t175.tre  t175.tre.golden
tests/t176/: t176.pg  t176.tre  t176.tre.golden
tests/t177/: t177.pg  t177.tre.golden
tests/t178/: t178.pg  t178.tre.golden
tests/t179/: t179.pg  t179.tre  t179.tre.golden
tests/t18/: t18.csv  t18.csv.golden  t18.pg  t18.tre  t18.tre.golden  t18_cr.csv  t18_cr.csv.golden  t18_ia.txt  t18_ia.txt.golden
tests/t180/: t180.pg  t180.tre  t180.tre.golden
tests/t181/: t181.pg  t181.tre  t181.tre.golden
tests/t182/: t182.pg  t182.tre  t182.tre.golden
tests/t183/: t183.pg  t183.tre  t183.tre.golden
tests/t184/: t184.pg  t184.tre  t184.tre.golden
tests/t185/: t185.pg  t185.tre  t185.tre.golden
tests/t186/: t186.pg  t186.tre  t186.tre.golden
tests/t187/: t187.pg  t187.tre  t187.tre.golden
tests/t188/: t188.pg  t188.tre.golden
tests/t189/: t189.pg  t189.tre  t189.tre.golden
tests/t19/: t19.csv  t19.csv.golden  t19.pg  t19.tre  t19.tre.golden  t19_rec-cc.tre  t19_rec-ci.gv
tests/t190/: t190.pg  t190.tre  t190.tre.golden
tests/t191/: dec258_16Saln_chopped.fasta  t191.csv.golden  t191.pg  t191.tre  (+1 more)
(+1808 files in other folders)
