Cabal-Version: 3.8
Name:          PhyG-integration-tests
Version:       0.1.0
Build-Type:    Simple
Tested-With:
  GHC == 9.6.2
  GHC == 9.4.5
  GHC == 9.2.8

Author:        Ward Wheeler <wheeler@amnh.org>
Copyright:     © 2021 Ward Wheeler and The American Museum of Natural History
License:       BSD-3-Clause
License-File:  LICENSE

Maintainer:    Ward Wheeler <wheeler@amnh.org>
Homepage:      https://github.com/AMNH/PhyG-Integration-Tests#readme
Bug-Reports:   https://github.com/AMNH/PhyG-Integration-Tests/issues

Source-Repository head
  Type:        git
  Location:    git://github.com/AMNH/PhyG-Integration-Tests.git

Data-Dir:
  tests

Data-Files:
  data/subset-hours.txt
  data/subset-rapid.txt
  **/*.dot
  **/*.fas
  **/*.fasta
  **/*.fastc
  **/*.golden
  **/*.pg
  **/*.ss
  **/*.tcm
--   **/*.tre
-- None of the below currently exist in the test suite!
--  **/*.tree
--  **/*.tnt

Flag Single-Threaded
  Description: Disable multi-threading
  Default:     False
  Manual:      True


Test-Suite integration-tests

  Main-Is:
    IntegrationTests.hs

  Autogen-Modules:
    PackageInfo_PhyG_integration_tests
    Paths_PhyG_integration_tests

  Build-Depends:
    base >= 4.11 && < 5.0,
    bytestring >= 0.10.10 && < 0.13,
    containers >= 0.6.2 && < 1.0,
    deepseq >= 1.4 && < 2.0,
    directory >= 1.3.6 && < 2.0,
    filepath >= 1.4.2 && < 2.0,
    process >= 1.6 && < 2.0,
    tasty >= 1.2 && < 2.0,
    tasty-golden >= 2.3 && < 3.0,
    tasty-rerun >= 1.1.14 && < 2.0,
    template-haskell >= 2.17 && < 3.0,
    time >= 1.11 && < 2.0,

  Build-Tool-Depends:    
    PhyG:phyg

  Default-Extensions:
    NoGeneralizedNewtypeDeriving

  Default-Language:
    GHC2021

  -- If the Single-Threaded flag was specified
  -- Limit the number of threads to *TWO*.
  -- At least two threads are required for
  -- the test suite to run correctly;
  --   * One thread for the Tasty coordinator
  --   * One thread for the spawned PhyG process
  If flag(Single-Threaded)
    Ghc-Options:
      -with-rtsopts=-N2

  -- Otherwise just use all the threads!
  Else
    Ghc-Options:
      -with-rtsopts=-N

  Ghc-Options:
    -- Always enable threading,
    -- but maybe conditionally limit the threads to only 2
    -threaded
    -- Usability options:
    -fdiagnostics-color=always
    -fhide-source-paths

    -- Optimization flags:
    -O2
        
    -- Sanity check warnings:
    --   1. Fail on a warning
    --   2. Include all warnings by default
    --   3. Exclude the undesirable warnings
--    -Werror
    -Weverything
    -- Exclusions:
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-inferred-safe-imports
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-type-defaults
    -Wno-unsafe

  Hs-Source-Dirs:
    src

  Other-Extensions:
    TemplateHaskell
    TemplateHaskellQuotes

  Other-Modules:
    PackageInfo_PhyG_integration_tests
    Paths_PhyG_integration_tests
    Test.Integration.Constants
    Test.Integration.Golden
    Test.Integration.Golden.Subset
    Test.Integration.Golden.Subset.Hours
    Test.Integration.Golden.Subset.Rapid
    Test.Integration.Golden.Subset.Reader
    Test.SubProcess

  Type:
    exitcode-stdio-1.0
